<resources>
    <string name="app_name">Series Searcher</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_my_shows">My Series</string>
    <string name="navigation_drawer_random_shows">Random Series</string>
    <string name="navigation_drawer_search">Search</string>
    <string name="navigation_drawer_disclaimer">Disclaimer</string>
    <string name="navigation_drawer_help">Help</string>
    <string name="navigation_drawer_data_saving_mode">Data Saving Mode</string>
    <string name="navigation_drawer_sign_out">Sign Out</string>
    <string name="content_description_app_icon">The app\'s icon</string>

    <!-- BaseActivity -->
    <string name="data_saving_mode_activated">Data Saving Mode activated - Images will not be downloaded while in Data Saving Mode</string>
    <string name="data_saving_mode_deactivated">Data Saving Mode deactivated</string>
    <string name="error_email_not_verified">Please verify your email address before continuing to use the app</string>
    <string name="error_email_still_not_verified">Your email address is still not verified, please request a verification email</string>
    <string name="email_verified">Your email address has been verified</string>

    <!-- HomeActivity -->
    <string name="button_add_shows">Add Series</string>
    <string name="label_home_message">You currently have no shows added to \'My Series\'</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="email_not_verified">Your email address has not been verified yet, please click on the \'Send email\' button below to be sent an email to verify your email address. The email will contain a link to verify your email address. Once you have verified your email address, please click on the \'Confirm\' button below and enter your password for this app to confirm your verification.</string>
    <string name="send_email">Send email</string>
    <string name="verification_email_sent">Verification email sent</string>

    <!-- SpecificShowActivity -->
    <string name="text_premiered_title">Premiered:</string>
    <string name="text_genres_title">Genres:</string>
    <string name="text_language_title">Language:</string>
    <string name="text_status_title">Status:</string>
    <string name="text_runtime_title">Runtime:</string>
    <string name="text_rating_title">Rating:</string>
    <string name="text_latest_episode_title">Latest Episode:</string>
    <string name="text_next_episode_title">Next Episode:</string>
    <string name="text_status">&lt;b>Status:&lt;/b> %s</string>
    <string name="text_runtime">&lt;b>Runtime:&lt;/b> %s</string>
    <string name="text_runtime_minutes">&lt;b>Runtime:&lt;/b> %s minutes</string>
    <string name="text_minutes">%s minutes</string>
    <string name="text_rating">&lt;b>Rating:&lt;/b> %s</string>
    <string name="text_genres_sections">%s, %s</string>
    <string name="text_next_episode">&lt;b>Next Episode:&lt;/b> %s</string>
    <string name="toggle">Toggle</string>
    <string name="error_show_poster_not_loaded">Show poster could not be loaded</string>

    <!-- SearchActivity -->
    <string name="label_search">Type to search&#8230;</string>
    <string name="no_series_found">No series were found&#8230;</string>

    <!-- Activity Titles -->
    <string name="title_activity_random_shows">Random Series</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_specific_show">SpecificShowActivity</string>
    <string name="title_activity_disclaimer">Disclaimer</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_search_by_episode">Search for episode</string>
    <string name="title_activity_home">My Series</string>

    <!-- SearchByEpisodeActivity -->
    <string name="button_search">Search</string>
    <string name="text_season">Season</string>
    <string name="text_episode">Episode Number</string>
    <string name="text_episode_air_date">Air Date:</string>
    <string name="error_no_episode_information_found">No information about that episode was found&#8230;</string>
    <string name="season_number">Season:</string>
    <string name="episode_number">Episode:</string>
    <string name="error_enter_whole_number">Please only enter whole numbers</string>
    <string name="error_missing_season_and_episode_number">Please enter a season and episode number</string>
    <string name="error_missing_season_number">Please enter a season number</string>
    <string name="error_missing_episode_number">Please enter an episode number</string>

    <!-- HelpActivity -->
    <string name="text_help">This app allows you to search for information about your favourite TV series. To search for a specific series, click on the \'Search\' item in the menu, and start typing. The app will automatically search for series that match your search while you type.
        \n\nIf you are looking for a new series to watch, click on the \'Random Series\' item in the menu. This will display a list of random series to you, which can give you ideas for a new series to watch. If you would like to see a new list of random series while on this page, click on the refresh button at the top right of your screen.
        \n\nIf you see a series that you would like to add to \'My Series\', click on the \'+\' button that appears next to the series\' name. All of the series that you have added to \'My Series\' are accessible via the \'My Series\' item in the menu. If a series has been added to \'My Series\', a delete button will appear next to the series\' name. This button can be used to remove a series from \'My Series\'.
        \n\nWhen viewing a list of series, click on a series\' poster to view an enlarged version of the series\' poster.
        \n\nIf you click on a series, a page with more information on the series will be displayed. In addition to seeing more information about the series on this page, you will also be able to search for a specific episode from the series by clicking on the search button and typing in the season and episode number. The app will then display any information it has about that specific episode.
        \n\nTo activate Data Saving Mode, click on the \'Data Saving Mode\' item in the menu. When Data Saving Mode is active, images will not be downloaded.</string>

    <!-- DisclaimerActivity -->
    <string name="text_disclaimer">This app gets all its information about series from the TVmaze website (available at <a href="www.tvmaze.com">www.tvmaze.com</a>).</string>

    <!-- RecyclerViewRow -->
    <string name="text_add_show">+</string>

    <!-- EnterPasswordFragment -->
    <string name="enter_password">Please enter your password</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <!-- Shared -->
    <string name="error_no_internet_connection">Your device is not connected to the Internet, please connect to the Internet and try again</string>
    <string name="error_fetching_data_no_internet_connection">Error fetching data, please check your internet connection</string>
    <string name="n_a">N/A</string>
    <string name="error_occurred">An error occurred, please try again</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="added_to_my_series">%s added to My Series</string>
    <string name="removed_from_my_series">%s removed from My Series</string>
    <string name="series_removal_confirmation">Are you sure you want to remove %s from My Series?</string>
    <string name="transition_image">Transition image</string>
    <string name="content_description_show_poster">The poster for the series</string>
    <string name="content_description_button_toggle_show">An icon that shows the user whether they have added a show to My Series or not</string>
    <string name="refresh">Refresh</string>
    <string name="season">S:</string>
    <string name="episode">E:</string>
    <string name="season_episode">%s %s, %s %s %s</string>
    <string name="no_summary_is_available">No summary is available</string>
</resources>