<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants">
    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/thumbnail_padding"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/image_show_poster"
            android:layout_width="@dimen/list_row_show_poster_size"
            android:layout_height="@dimen/list_row_show_poster_size"
            android:transitionName="@string/transition_image"
            android:contentDescription="@string/content_description_show_poster"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_show_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="@dimen/list_row_title_text_size"
        android:textStyle="bold"
        android:layout_toLeftOf="@+id/linear_layout_button"/>

    <TextView
        android:id="@+id/text_show_rating"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_show_title"
        android:textColor="#343434"
        android:textSize="@dimen/list_row_text_size"
        android:layout_marginTop="@dimen/list_row_text_margin_top"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_toLeftOf="@+id/linear_layout_button"/>

    <TextView
        android:id="@+id/text_show_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_show_rating"
        android:textColor="#343434"
        android:textSize="@dimen/list_row_text_size"
        android:layout_marginTop="@dimen/list_row_text_margin_top"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_toLeftOf="@+id/linear_layout_button"/>

    <TextView
        android:id="@+id/text_show_next_episode_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_show_status"
        android:textColor="#343434"
        android:textSize="@dimen/list_row_text_size"
        android:layout_marginTop="@dimen/list_row_text_margin_top"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_toLeftOf="@+id/linear_layout_button"/>

    <LinearLayout
        android:id="@+id/linear_layout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/list_row_button_padding"
        android:layout_marginLeft="@dimen/list_row_button_margin_left">

        <ImageButton
            android:id="@+id/button_toggle_show"
            android:layout_width="@dimen/list_row_button_size"
            android:layout_height="@dimen/list_row_button_size"
            android:textSize="@dimen/list_row_button_text_size"
            android:src="@drawable/ic_add_black_24dp"
            android:tint="@color/colorPrimary"
            android:tag="Add"
            android:text="@string/text_add_show"
            android:textColor="@color/colorPrimary"
            android:focusable="false"
            android:background="@drawable/button"
            android:contentDescription="@string/content_description_button_toggle_show"/>
    </LinearLayout>
</RelativeLayout>