<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/cl_email_not_verified"
    android:visibility="gone"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_email_not_verified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/email_not_verified"
                style="@style/TextViewMessageStyle"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="@dimen/guideline_size"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <Button
                android:id="@+id/b_verify_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_email_not_verified"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                android:onClick="sendVerificationEmail"
                style="@style/TextButtonStyle"
                android:text="@string/send_email"
                android:layout_marginEnd="@dimen/text_button_margin_end"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <Button
                android:id="@+id/b_confirm_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_email_not_verified"
                app:layout_constraintStart_toEndOf="@id/guideline"
                android:onClick="confirmVerification"
                style="@style/ContainedButtonStyle"
                android:text="@string/confirm"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>