<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.matthewsyren.seriessearcher.activities.SearchByEpisodeActivity">
        <TextView
            android:id="@+id/text_show_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/specific_show_activity_heading_text_size"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_season"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_show_title">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_show_season"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_season"
                android:inputType="number"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:imeOptions="flagNoExtractUi"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_episode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_season"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_show_episode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_episode"
                android:inputType="number"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:imeOptions="flagNoExtractUi"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_search"
            android:layout_below="@id/text_input_layout_episode"
            android:onClick="searchByEpisodeOnClick"
            android:layout_centerHorizontal="true"
            style="@style/ButtonStyle"/>

        <TextView
            android:id="@+id/text_show_episode_name"
            android:layout_below="@+id/button_search"
            style="@style/SpecificShowText"/>

        <TextView
            android:id="@+id/text_show_air_date"
            android:layout_below="@+id/text_show_episode_name"
            style="@style/SpecificShowText"/>

        <TextView
            android:id="@+id/text_show_runtime"
            android:layout_below="@+id/text_show_air_date"
            style="@style/SpecificShowText"/>

        <TextView
            android:id="@+id/text_show_summary"
            android:layout_below="@+id/text_show_runtime"
            style="@style/SpecificShowText" />

        <TextView
            android:id="@+id/text_show_status"
            android:layout_below="@+id/text_show_summary"
            style="@style/SpecificShowText"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</ScrollView>

